Aug 18 2002  2.5.2  Moved netline to panelfront_display.cc
                    Fixed apm support for '-1' time error
                    Added wireless_client export to kismet_server
                    Added wireless_client counting column for panel UI
                    Added fflush to waypoint writing
Aug 16 2002  2.5.2  Fixed dumpfile.h to not generate warnings on GCC 3.2
                    ACPI battery support patches merged in (configure with
                     --enable-acpi) (Million and Juliano)
                    Split panelfront.cc into three files for compile speed
                     and memory concerns.
                    Fixed shadowed variable errors under gcc-3.2 -Wshadow
Aug 15 2002  2.5.2  Client tracking internals complete, aggregate IP range
                     calculations used to find network ranges, and networks
                     with only a single IP display all four octets.
                    Hopefully fixed ipkg creation, thanks to James McGlashan
Aug 14 2002  2.5.2  Preliminary detection of Lucent Outdoor Router equip
                     thanks to Steve's dumps.
Aug 12 2002  2.5.2  Passing of card type param to packet sources
                    BSD cisco handing of additional 2 bytes in the middle of
                     the packet (WHY are those there?)
                    BSD prism2 handling of additional bytes in the middle of
                     the packet
Aug 08 2002  2.5.2  More fixes to the expat include order to eliminate errors
                     on some systems.
                    BSD include fixes for detecting wtaplib and tweaks to the
                     bsd pcap interface
Aug 07 2002  2.5.2  More speech changes
Aug 06 2002  2.5.2  Fixed preprocessor problem in pcapsource.cc
                    Maybe fixed speech
Aug 03 2002  2.5.2  Started 2.5.2 development tree.

Aug 03 2002  2.4.6  Released 2.4.6 with numerous bugfixes to the 2.4.5 code.

Aug 03 2002  2.5.1  Fixed include order in expat.cc